[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Pack of games, written in Python while studying at Hexlet.io"
authors = ["Savin Timur <svn.tmr@bk.ru>"]

packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
